<resources>
    <string name="app_name">Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences">Preferences</string>
    <string name="random">Random</string>
    <string name="recipe">Recipe</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="demo_title">Freshly Grilled Crab with Lemon and Seasonal sauces</string>
    <string name="nutrition">Nutrition</string>
</resources>