<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/steel_while"
        tools:context=".RecipeDetailActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="12dp"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/name_image_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.10"
                android:padding="10dp"
                android:text="@string/demo_title"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Food_Image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginTop="75dp"
                android:scaleType="fitXY"
                android:src="@drawable/food" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ingredientsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_image_card">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/ingredients"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:clickable="false"
                    android:id="@+id/more_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="55dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/instructionssCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsCard">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/instructions"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:clickable="false"
                    android:id="@+id/more_ib_ins"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/instructionsTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/instructions"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/nutritionsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionssCard">

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/nutrition"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:clickable="false"
                    android:id="@+id/more_ib_nut"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nutritions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/CaloriesTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Calories : "
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/CarbsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Carbs : "
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/FatsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fats : "
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ProteinsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Protein : "
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
